force-app/main/default/objects/Opportunity/fields/Account_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Activation_Date__c</fullName>
    <description>Field for Deployment Stage section in Meson</description>
    <label>Account Activation Date</label>
    <type>DateTime</type>
</CustomField>