force-app/main/default/objects/Opportunity/fields/Account_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Account_Legal_Entity__c</fullName>
    <formula>Text(Account.Account_Legal_Entity__c)</formula>
    <label>Account Legal Entity</label>
    <type>Text</type>
</CustomField>