force-app/main/default/objects/Opportunity/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <label>Account Manager</label>
    <type>Email</type>
</CustomField>