force-app/main/default/objects/Opportunity/fields/Account_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Email__c</fullName>
    <formula>Account.InMobi_AM__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Manager Email</label>
    <type>Text</type>
</CustomField>