force-app/main/default/objects/Opportunity/fields/Account_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Account_Payment_Terms__c</fullName>
    <formula>Account.Payment_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Payment Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>