force-app/main/default/objects/Opportunity/fields/Account_Rating__c.field-meta.xml
<CustomField>
    <fullName>Account_Rating__c</fullName>
    <formula>TEXT( Account.Rating )</formula>
    <label>Account Rating</label>
    <type>Text</type>
</CustomField>