force-app/main/default/objects/Opportunity/fields/Ad_Domain__c.field-meta.xml
<CustomField>
    <fullName>Ad_Domain__c</fullName>
    <label>Ad Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>