force-app/main/default/objects/Opportunity/fields/Ad_NetworkId__c.field-meta.xml
<CustomField>
    <fullName>Ad_NetworkId__c</fullName>
    <label>Ad NetworkId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>