force-app/main/default/objects/Opportunity/fields/Ad_Server__c.field-meta.xml
<CustomField>
    <fullName>Ad_Server__c</fullName>
    <label>Ad Server</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adap.TV</fullName>
            </value>
            <value>
                <fullName>AdBuddiz</fullName>
            </value>
            <value>
                <fullName>AdColony</fullName>
            </value>
            <value>
                <fullName>AddAppTr</fullName>
            </value>
            <value>
                <fullName>AdMarvel</fullName>
            </value>
            <value>
                <fullName>AdMob</fullName>
            </value>
            <value>
                <fullName>Adsense</fullName>
            </value>
            <value>
                <fullName>AdSpeed</fullName>
            </value>
            <value>
                <fullName>AdTech</fullName>
            </value>
            <value>
                <fullName>AdZerk</fullName>
            </value>
            <value>
                <fullName>AerServ</fullName>
            </value>
            <value>
                <fullName>Airpush</fullName>
            </value>
            <value>
                <fullName>AppLovin</fullName>
            </value>
            <value>
                <fullName>Appnext</fullName>
            </value>
            <value>
                <fullName>AppNexus</fullName>
            </value>
            <value>
                <fullName>Appodeal</fullName>
            </value>
            <value>
                <fullName>Chartboost</fullName>
            </value>
            <value>
                <fullName>Custom - In-house</fullName>
            </value>
            <value>
                <fullName>DFP - Google</fullName>
            </value>
            <value>
                <fullName>DFP - Premium</fullName>
            </value>
            <value>
                <fullName>Ember</fullName>
            </value>
            <value>
                <fullName>Enhance</fullName>
            </value>
            <value>
                <fullName>Epom</fullName>
            </value>
            <value>
                <fullName>Flymob</fullName>
            </value>
            <value>
                <fullName>Freewheel</fullName>
            </value>
            <value>
                <fullName>Fyber</fullName>
            </value>
            <value>
                <fullName>Heyzap</fullName>
            </value>
            <value>
                <fullName>Leadbolt</fullName>
            </value>
            <value>
                <fullName>Liverail</fullName>
            </value>
            <value>
                <fullName>LQKD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>