force-app/main/default/objects/Opportunity/fields/AerServ_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>AerServ_Opportunity_Id__c</fullName>
    <description>Used for the Opportunity ID of the AerSrv salesforce</description>
    <externalId>true</externalId>
    <label>AerServ Opportunity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>