force-app/main/default/objects/Opportunity/fields/AerServ_Opportunity_Link__c.field-meta.xml
<CustomField>
    <fullName>AerServ_Opportunity_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://na88.salesforce.com/&quot;+AerServ_Opportunity_Id__c,&quot;AerServ Opportunity Link&quot;)</formula>
    <label>AerServ Opportunity Link</label>
    <type>Text</type>
</CustomField>