force-app/main/default/objects/Opportunity/fields/Agency_PO__c.field-meta.xml
<CustomField>
    <fullName>Agency_PO__c</fullName>
    <label>Agency PO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>