force-app/main/default/objects/Opportunity/fields/Agency_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Agency_PO_Number__c</fullName>
    <label>Agency PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>