force-app/main/default/objects/Opportunity/fields/Alexa_Rank__c.field-meta.xml
<CustomField>
    <fullName>Alexa_Rank__c</fullName>
    <label>Alexa Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>