force-app/main/default/objects/Opportunity/fields/Amount_in_Closed__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_Closed__c</fullName>
    <formula>IF( Amount &lt;&gt; 0 &amp;&amp; ISPICKVAL(StageName , &quot;Closed Won&quot;),ABS(Amount), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount in Closed</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>