force-app/main/default/objects/Opportunity/fields/Amount_in_Commit__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_Commit__c</fullName>
    <formula>IF( Amount &lt;&gt; 0 &amp;&amp; ISPICKVAL(StageName , &quot;Proposal/Price Quote&quot;),ABS(Amount), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount in Commit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>