force-app/main/default/objects/Opportunity/fields/Amount_in_Upside__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_Upside__c</fullName>
    <formula>IF( Amount &lt;&gt; 0 &amp;&amp; ISPICKVAL(StageName , &quot;Agreement on Success Plan&quot;) || ISPICKVAL(StageName , &quot;Ongoing Evaluation &amp; Feedback&quot; ),ABS(Amount), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount in Upside</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>