force-app/main/default/objects/Opportunity/fields/Billing_Account_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Legal_Name__c</fullName>
    <formula>Account.Billing_Account_Legal_Name__c</formula>
    <label>Billing Account Legal Name</label>
    <type>Text</type>
</CustomField>