force-app/main/default/objects/Opportunity/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <description>This field will capture the Billing Address from the Account.</description>
    <inlineHelpText>This field will be populated from Account Billing address once opportunity is created.</inlineHelpText>
    <label>Billing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>