force-app/main/default/objects/Opportunity/fields/BR_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>BR_Close_Date__c</fullName>
    <formula>If( Text(Owner.BR_Region__c) = &apos;NA&apos; &amp;&amp; (CloseDate &gt;= DATEVALUE( &quot;2020-11-18&quot; ) || CloseDate &lt;= DATEVALUE( &quot;2020-11-19&quot; )),

(TEXT(Day(CloseDate )) &amp; &quot;-&quot; &amp; TEXT(MONTH(CloseDate )) &amp; &quot;-&quot; &amp; TEXT(YEAR(CloseDate ))),
&apos;NA&apos;)</formula>
    <label>BR Close Date</label>
    <type>Text</type>
</CustomField>