force-app/main/default/objects/Opportunity/fields/Brand_Name1__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the Advertiser Account for which opportunity is created.</inlineHelpText>
    <label>Linked Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Linked Client Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>