force-app/main/default/objects/Opportunity/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <inlineHelpText>You might have entered this field manually, please search for a Advertiser Account in the above mandatory field - Linked Client and save.</inlineHelpText>
    <label>Brand/Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>