force-app/main/default/objects/Opportunity/fields/Burn_Day_Target__c.field-meta.xml
<CustomField>
    <fullName>Burn_Day_Target__c</fullName>
    <description>For Publisher Opportunity</description>
    <label>Potential Revenue per Day</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>