force-app/main/default/objects/Opportunity/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <label>Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>PMP</fullName>
            </value>
            <value>
                <fullName>Run of Network</fullName>
            </value>
            <value>
                <fullName>Spot Buy</fullName>
            </value>
            <value>
                <fullName>Deal ID/PMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>