force-app/main/default/objects/Opportunity/fields/Campaign_Value__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Value__c</fullName>
    <label>Campaign Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>