force-app/main/default/objects/Opportunity/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trucks</fullName>
            </value>
            <value>
                <fullName>Buyers</fullName>
            </value>
            <value>
                <fullName>Audience Extension</fullName>
            </value>
            <value>
                <fullName>Agency PMP</fullName>
            </value>
            <value>
                <fullName>Glance</fullName>
            </value>
            <value>
                <fullName>Blink</fullName>
            </value>
            <value>
                <fullName>Pulse</fullName>
            </value>
            <value>
                <fullName>Microsoft Bing (MSA)</fullName>
            </value>
            <value>
                <fullName>Direct Campaign</fullName>
            </value>
            <value>
                <fullName>PMP</fullName>
            </value>
            <value>
                <fullName>Banner</fullName>
            </value>
            <value>
                <fullName>Full-Screen Video</fullName>
            </value>
            <value>
                <fullName>In-Feed Video Ads</fullName>
            </value>
            <value>
                <fullName>Interactive Video Ads</fullName>
            </value>
            <value>
                <fullName>Interstitial</fullName>
            </value>
            <value>
                <fullName>Native Ads</fullName>
            </value>
            <value>
                <fullName>Playable Ads</fullName>
            </value>
            <value>
                <fullName>Rewarded Video Ads</fullName>
            </value>
            <value>
                <fullName>Splash Ads</fullName>
            </value>
            <value>
                <fullName>Splash Video Ads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>