force-app/main/default/objects/Opportunity/fields/Client_Direct__c.field-meta.xml
<CustomField>
    <fullName>Client_Direct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Direct</label>
    <type>Checkbox</type>
</CustomField>