force-app/main/default/objects/Opportunity/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <inlineHelpText>Type I - Self-Serve Platform Customers
Type II - Managed-Serve Price-Transparent Platform Customers
Type III - Managed-Serve Arbitrage Platform Customers</inlineHelpText>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type 1</fullName>
            </value>
            <value>
                <fullName>Type 2</fullName>
            </value>
            <value>
                <fullName>Type 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>