force-app/main/default/objects/Opportunity/fields/Content_Classsification__c.field-meta.xml
<CustomField>
    <fullName>Content_Classsification__c</fullName>
    <label>Content Classification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Family Safe</fullName>
            </value>
            <value>
                <fullName>Mature</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>