force-app/main/default/objects/Opportunity/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Non-Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>