force-app/main/default/objects/Opportunity/fields/Convertion_Rate_From_IO__c.field-meta.xml
<CustomField>
    <fullName>Convertion_Rate_From_IO__c</fullName>
    <description>i was taoking Max of Conversion Rate Form IO 
considring that there is alwasy a single Standard IO below Opp</description>
    <label>Convertion Rate From IO</label>
    <summarizedField>Insertion_Order__c.Conversion_Rate__c</summarizedField>
    <summaryFilterItems>
        <field>Insertion_Order__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>1. Standard IO, Locked Standard IO</value>
    </summaryFilterItems>
    <summaryForeignKey>Insertion_Order__c.Opportunity_Name__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>