force-app/main/default/objects/Opportunity/fields/Count_Opportunity_Products__c.field-meta.xml
<CustomField>
    <fullName>Count_Opportunity_Products__c</fullName>
    <label>Count Opportunity Products</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>