force-app/main/default/objects/Opportunity/fields/Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Origin__c</fullName>
    <description>This field will capture the country of origin of the opportunity.</description>
    <label>Country of Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>