force-app/main/default/objects/Opportunity/fields/CPC_min__c.field-meta.xml
<CustomField>
    <fullName>CPC_min__c</fullName>
    <description>Created as part of Supply 2.0 changes</description>
    <label>CPC(min)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>