force-app/main/default/objects/Opportunity/fields/Credit_Available_OO__c.field-meta.xml
<CustomField>
    <fullName>Credit_Available_OO__c</fullName>
    <formula>Account.Credit_Available_OO__c</formula>
    <label>Credit Available OO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>