force-app/main/default/objects/Opportunity/fields/Currency_Rate__c.field-meta.xml
<CustomField>
    <fullName>Currency_Rate__c</fullName>
    <formula>CURRENCYRATE(Text(CurrencyIsoCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>