force-app/main/default/objects/Opportunity/fields/Current_Burn_Day__c.field-meta.xml
<CustomField>
    <fullName>Current_Burn_Day__c</fullName>
    <description>For Publisher Opportunity</description>
    <label>Current Burn/Day</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>